added maven repository info

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,6 +1,6 @@
 #Project properties
 #Sun Dec 19 21:24:46 EST 2010
-project.organization=comonad.com
+project.organization=com.comonad
 project.name=scala-attoparsec
 sbt.version=0.7.4
 project.version=0.1
