--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: scala
 scala:
-  - 2.11.1
-  - 2.10.4
+  - 2.11.6
+  - 2.10.5
 jdk:
+  - oraclejdk8
   - oraclejdk7
-  - openjdk6
 
 script: sbt ++$TRAVIS_SCALA_VERSION test
