Update scala.js to version 0.6.18 and make tests run on both JVM and JS

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: scala
 scala:
-  - 2.11.8
-  - 2.10.5
+  - 2.11.11
+  - 2.10.6
+install:
+  - . $HOME/.nvm/nvm.sh
+  - nvm install stable
+  - nvm use stable
 jdk:
   - oraclejdk8
   - oraclejdk7
