--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jdk:
 
 script:
   - sbt ++2.11.12 test
-  - sbt ++2.13.0-M5 testsJVM/test testsJS/test
+  - sbt ++2.13.0 test
   - sbt ++2.12.8  coverage test docs/tut coverageReport
 
 after_success:
