done with paradox, for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
   include:
     # stage="test" if no stage is specified
     - env: TEST="build"
-      script: sbt +compile +test docs/tut coverageReport
+      script: sbt +compile +test docs/paradox coverageReport
     # run ci-release only if previous stages passed
     - stage: release
       script: sbt ci-release
